Add boiler plate to 2nd html file
oops I forgot

--- a/recipes/chocolate-icebox-cake.html
+++ b/recipes/chocolate-icebox-cake.html
@@ -1,19 +1,28 @@
-<h1>Chocolate Icebox Cake</h1>
-<img src="https://www.allrecipes.com/thmb/JpeU5rKnA5z5SUoF2f7PB-6TGK4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR_GC_OreoZebraIceboxCakeDSC06063-3923eb577b644389993bd75c6e05a3a1.jpg" alt="A picture of Chocolate Icebox Cake">
-<h2>Description</h2>
-<p>You only need 4 ingredients to make this impressive icebox cake. Only needing confectioners' sugar, heavy cream, vanilla extract, and Oreo Thins, this cake is sure to make any party goer satisfied.</p>
-<h2>Ingredients</h2>
-<ul>
-    <li>3 cups heavy cream</li>
-    <li>1/2 cup confectioners' sugar</li>
-    <li>2 teaspoons vanilla extract</li>   
-    <li>1 ½ (13.1 ounce) packages thin chocolate cream sandwich cookies, such as Oreo Thins</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li> Line an 8x4-inch loaf pan with plastic wrap, allowing the wrap to hang over the sides completely.</li>
-    <li>Place cream in a large bowl and beat with an electric mixer on medium speed for 2 minutes. Add powdered sugar and vanilla extract; continue to beat until soft-medium peaks form. Reserve 1 cup of whipped cream and refrigerate until ready to use.</li>
-    <li>Place a thin layer of whipped cream in the bottom of the prepared pan. Reserve 2 cookies for garnish. Add a layer of cookies over the cream, breaking any cookies as necessary to fill in any empty spaces; top with 1/4 of remaining cream. Top with another layer of cookies and another 1/4 of remaining cream. Repeat the process two more times until all the cream is used. Top with remaining cookies, pressing them into the cream.</li>
-    <li>Wrap the plastic around the loaf and refrigerate at least 8 hours.</li>
-    <li>Unwrap cake and invert onto a serving plate. Top cake with reserved whipped cream. Crush reserved 2 cookies and sprinkle on top as garnish; slice and serve as desired.</li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Chocolate Icebox Cake</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>Chocolate Icebox Cake</h1>
+        <img src="https://www.allrecipes.com/thmb/JpeU5rKnA5z5SUoF2f7PB-6TGK4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR_GC_OreoZebraIceboxCakeDSC06063-3923eb577b644389993bd75c6e05a3a1.jpg" alt="A picture of Chocolate Icebox Cake">
+        <h2>Description</h2>
+        <p>You only need 4 ingredients to make this impressive icebox cake. Only needing confectioners' sugar, heavy cream, vanilla extract, and Oreo Thins, this cake is sure to make any party goer satisfied.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 cups heavy cream</li>
+            <li>1/2 cup confectioners' sugar</li>
+            <li>2 teaspoons vanilla extract</li>   
+            <li>1 ½ (13.1 ounce) packages thin chocolate cream sandwich cookies, such as Oreo Thins</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li> Line an 8x4-inch loaf pan with plastic wrap, allowing the wrap to hang over the sides completely.</li>
+            <li>Place cream in a large bowl and beat with an electric mixer on medium speed for 2 minutes. Add powdered sugar and vanilla extract; continue to beat until soft-medium peaks form. Reserve 1 cup of whipped cream and refrigerate until ready to use.</li>
+            <li>Place a thin layer of whipped cream in the bottom of the prepared pan. Reserve 2 cookies for garnish. Add a layer of cookies over the cream, breaking any cookies as necessary to fill in any empty spaces; top with 1/4 of remaining cream. Top with another layer of cookies and another 1/4 of remaining cream. Repeat the process two more times until all the cream is used. Top with remaining cookies, pressing them into the cream.</li>
+            <li>Wrap the plastic around the loaf and refrigerate at least 8 hours.</li>
+            <li>Unwrap cake and invert onto a serving plate. Top cake with reserved whipped cream. Crush reserved 2 cookies and sprinkle on top as garnish; slice and serve as desired.</li>
+        </ol>
+    </body>
+</html>
