--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a>
+    <p><a href="recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
+    <p><a href="recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
 </body>
 </html>
