Add page and content
- Added mnm-cookie.html and its content

- Added link to mnm-cookie.html in index.html

- Changed href to first look in root folder to avoid future bugs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
-    <p><a href="recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
+    <p><a href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
+    <p><a href="./recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
+    <p><a href="./recipes/mnm-cookie.html">Peanut Butter M&M Cookies</a></p>
 </body>
 </html>
