Add hyperlink back to index

--- a/recipes/chocolate-icebox-cake.html
+++ b/recipes/chocolate-icebox-cake.html
@@ -24,5 +24,6 @@
             <li>Wrap the plastic around the loaf and refrigerate at least 8 hours.</li>
             <li>Unwrap cake and invert onto a serving plate. Top cake with reserved whipped cream. Crush reserved 2 cookies and sprinkle on top as garnish; slice and serve as desired.</li>
         </ol>
+        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
