--- a/recipes/oreo-cheesecake-bars.html
+++ b/recipes/oreo-cheesecake-bars.html
@@ -40,5 +40,6 @@
             <li>Remove uncut bars from the pan by lifting foil.</li>
             <li>Cut into 2x2-inch bars to serve.</li>
         </ol>
+        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
