--- a/recipes/mnm-cookie.html
+++ b/recipes/mnm-cookie.html
@@ -28,5 +28,6 @@
             <li>Scoop out 1 1/2 tablespoon sized balls of dough and place 1 inch apart on the baking sheets. Flatten dough balls to about 1/2 inch thickness.</li>
             <li>Bake in the preheated oven until tops of cookies begin to slightly crack, about 10 minutes. Allow cookies to cool 10 minutes on baking sheets before removing to a wire rack to cool completely.</li>
         </ol>
+        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
