Added CSS to the project

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>Odin Recipes</title>
     <meta charset="UTF-8">
+    <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <p><a href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
-    <p><a href="./recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
-    <p><a href="./recipes/mnm-cookie.html">Peanut Butter M&M Cookies</a></p>
+<body class="font" id="background">
+    <h1 id="header">Odin Recipes</h1>
+    <p class="page-text">Click the links below to learn how to make each of the recipes.</p>
+    <p><a class="link" href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
+    <p><a class="link" href="./recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
+    <p><a class="link" href="./recipes/mnm-cookie.html">Peanut Butter M&M Cookies</a></p>
 </body>
 </html>
