--- a/recipes/chocolate-icebox-cake.html
+++ b/recipes/chocolate-icebox-cake.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="font" lang="en">
     <head>
         <title>Chocolate Icebox Cake</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="font" id="background">
         <h1>Chocolate Icebox Cake</h1>
         <img src="https://www.allrecipes.com/thmb/JpeU5rKnA5z5SUoF2f7PB-6TGK4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR_GC_OreoZebraIceboxCakeDSC06063-3923eb577b644389993bd75c6e05a3a1.jpg" alt="A picture of Chocolate Icebox Cake">
         <h2>Description</h2>
@@ -24,6 +24,6 @@
             <li>Wrap the plastic around the loaf and refrigerate at least 8 hours.</li>
             <li>Unwrap cake and invert onto a serving plate. Top cake with reserved whipped cream. Crush reserved 2 cookies and sprinkle on top as garnish; slice and serve as desired.</li>
         </ol>
-        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
+        <p>Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
