--- a/recipes/mnm-cookie.html
+++ b/recipes/mnm-cookie.html
@@ -4,7 +4,7 @@
         <title>Peanut Butter M&M Cookies</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="font" id="background">
         <h1>Peanut Butter M&M Cookies</h1>
         <img src="https://www.allrecipes.com/thmb/qVH_q6c89_fz8JOQtDRaepbh0vA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1674497176DSC_1299202-2000-d686320219704cf09e0db7373af0ceae.jpg" alt="A picture of cookies with M&M's on top.">
         <h2>Description</h2>
@@ -28,6 +28,6 @@
             <li>Scoop out 1 1/2 tablespoon sized balls of dough and place 1 inch apart on the baking sheets. Flatten dough balls to about 1/2 inch thickness.</li>
             <li>Bake in the preheated oven until tops of cookies begin to slightly crack, about 10 minutes. Allow cookies to cool 10 minutes on baking sheets before removing to a wire rack to cool completely.</li>
         </ol>
-        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
+        <p>Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
