--- a/recipes/oreo-cheesecake-bars.html
+++ b/recipes/oreo-cheesecake-bars.html
@@ -4,7 +4,7 @@
         <title>Oreo Cheesecake Bars</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="font" id="background">
         <h1>Oreo Cheesecake Bars</h1>
         <img src="https://www.allrecipes.com/thmb/07pH2BFiT039hKoye3mj-UCviDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497371-oreo-cheesecake-bars-DDMFS-beauty-4x3-BG-9335-7aa15259eab74d4893f7dd3a3273855a.jpg" alt="A picture of a bar of cheesecake with oreos crushed in it.">
         <h2>Description</h2>
@@ -40,6 +40,6 @@
             <li>Remove uncut bars from the pan by lifting foil.</li>
             <li>Cut into 2x2-inch bars to serve.</li>
         </ol>
-        <p>Click <a href="../index.html">HERE</a> to return to the front page.</p>
+        <p>Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
