--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="font" id="background">
-    <h1 id="header">Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
     <p class="page-text">Click the links below to learn how to make each of the recipes.</p>
-    <p><a class="link" href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></p>
-    <p><a class="link" href="./recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></p>
-    <p><a class="link" href="./recipes/mnm-cookie.html">Peanut Butter M&M Cookies</a></p>
+    <div><a class="link" href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></div>
+    <div><a class="link" href="./recipes/oreo-cheesecake-bars.html">Oreo Cheesecake Bars</a></div>
+    <div><a class="link" href="./recipes/mnm-cookie.html">Peanut Butter M&M Cookies</a></div>
 </body>
 </html>
