--- a/recipes/mnm-cookie.html
+++ b/recipes/mnm-cookie.html
@@ -3,14 +3,15 @@
     <head>
         <title>Peanut Butter M&M Cookies</title>
         <meta charset="UTF-8">
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body class="font" id="background">
         <h1>Peanut Butter M&M Cookies</h1>
         <img src="https://www.allrecipes.com/thmb/qVH_q6c89_fz8JOQtDRaepbh0vA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1674497176DSC_1299202-2000-d686320219704cf09e0db7373af0ceae.jpg" alt="A picture of cookies with M&M's on top.">
         <h2>Description</h2>
-        <p>These cookies require no chill time, no mixers, and no flour! They're so fast, easy, and tasty, it's almost unbelievable!</p>
+        <p class="page-text">These cookies require no chill time, no mixers, and no flour! They're so fast, easy, and tasty, it's almost unbelievable!</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="page-text">
             <li>1 cup creamy peanut butter</li>
             <li>¾ cup firmly packed brown sugar</li>
             <li>2 tablespoons firmly packed brown sugar</li>
@@ -22,12 +23,12 @@
             <li>½ cup mini candy-coated chocolate pieces (such as mini M&M's®)</li>
         </ul>
         <h2>Steps</h2>
-        <ol>
+        <ol class="page-text">
             <li>Preheat the oven to 350 degrees F (175 degrees C). Line two baking sheets with parchment paper.</li>
             <li>Mix together peanut butter, 3/4 cup plus 2 tablespoons brown sugar, egg, baking soda, vanilla, salt, and nutmeg until combined. Mix in mini chocolate M&Ms.</li>
             <li>Scoop out 1 1/2 tablespoon sized balls of dough and place 1 inch apart on the baking sheets. Flatten dough balls to about 1/2 inch thickness.</li>
             <li>Bake in the preheated oven until tops of cookies begin to slightly crack, about 10 minutes. Allow cookies to cool 10 minutes on baking sheets before removing to a wire rack to cool completely.</li>
         </ol>
-        <p>Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
+        <p class="page-text">Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
