--- a/recipes/oreo-cheesecake-bars.html
+++ b/recipes/oreo-cheesecake-bars.html
@@ -3,14 +3,15 @@
     <head>
         <title>Oreo Cheesecake Bars</title>
         <meta charset="UTF-8">
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body class="font" id="background">
         <h1>Oreo Cheesecake Bars</h1>
         <img src="https://www.allrecipes.com/thmb/07pH2BFiT039hKoye3mj-UCviDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497371-oreo-cheesecake-bars-DDMFS-beauty-4x3-BG-9335-7aa15259eab74d4893f7dd3a3273855a.jpg" alt="A picture of a bar of cheesecake with oreos crushed in it.">
         <h2>Description</h2>
-        <p>These oreo cheesecake bars are simply irresistible for everyone loving cookies and cream. They are surprisingly easy to make and are the perfect treat for lots of people.</p>
+        <p class="page-text">These oreo cheesecake bars are simply irresistible for everyone loving cookies and cream. They are surprisingly easy to make and are the perfect treat for lots of people.</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="page-text">
             <li>nonstick cooking spray</li>
             <li>1 (19.1-ounce) package chocolate sandwich cookies with white filling (such as Oreos®), divided</li>
             <li>1/4 cup salted butter</li>   
@@ -22,7 +23,7 @@
             <li>1/4 teaspoon salt</li>
         </ul>
         <h2>Steps</h2>
-        <ol>
+        <ol class="page-text">
             <li>Gather all ingredients. Preheat the oven to 325 degrees F (165 degrees C).</li>
             <li>Line a 13x9x2-inch baking pan with heavy-duty foil, allowing 2 inches of overhang on two opposite sides of the pan. Coat foil lightly with nonstick cooking spray; set aside.</li>
             <li>Place 30 cookies in a food processor. Cover and pulse until finely ground.</li>
@@ -40,6 +41,6 @@
             <li>Remove uncut bars from the pan by lifting foil.</li>
             <li>Cut into 2x2-inch bars to serve.</li>
         </ol>
-        <p>Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
+        <p class="page-text">Click <a class="link" href="../index.html">HERE</a> to return to the front page.</p>
     </body>
 </html>
