--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body class="font" id="background">
+<body id="const">
     <h1>Odin Recipes</h1>
     <p class="page-text">Click the links below to learn how to make each of the recipes.</p>
     <div><a class="link" href="./recipes/chocolate-icebox-cake.html">Chocolate Icebox Cake</a></div>
