--- a/recipes/mnm-cookie.html
+++ b/recipes/mnm-cookie.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../styles.css" rel="stylesheet">
     </head>
-    <body class="font" id="background">
+    <body id="const">
         <h1>Peanut Butter M&M Cookies</h1>
         <img src="https://www.allrecipes.com/thmb/qVH_q6c89_fz8JOQtDRaepbh0vA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1674497176DSC_1299202-2000-d686320219704cf09e0db7373af0ceae.jpg" alt="A picture of cookies with M&M's on top.">
         <h2>Description</h2>
