--- a/recipes/chocolate-icebox-cake.html
+++ b/recipes/chocolate-icebox-cake.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../styles.css" rel="stylesheet">
     </head>
-    <body class="font" id="background">
+    <body id="const">
         <h1>Chocolate Icebox Cake</h1>
         <img src="https://www.allrecipes.com/thmb/JpeU5rKnA5z5SUoF2f7PB-6TGK4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR_GC_OreoZebraIceboxCakeDSC06063-3923eb577b644389993bd75c6e05a3a1.jpg" alt="A picture of Chocolate Icebox Cake">
         <h2>Description</h2>
